# languages

./: .gitignore  Cargo.toml  Gemfile  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/workflows/: sync-repos.yml  test.yml
compiled_starters/docker-starter-c/: Dockerfile  README.md  codecrafters.yml  your_docker.sh
compiled_starters/docker-starter-go/: Dockerfile  README.md  your_docker.sh
compiled_starters/docker-starter-haskell/: README.md  stack.yaml  your_docker.sh
compiled_starters/docker-starter-nim/: README.md  codecrafters.yml
compiled_starters/docker-starter-php/: README.md
compiled_starters/docker-starter-python/: Dockerfile  README.md  your_docker.sh
compiled_starters/docker-starter-rust/: Cargo.toml  Dockerfile  README.md
compiled_starters/docker-starter-swift/: README.md  codecrafters.yml
compiled_starters/git-starter-go/: README.md  your_git.sh
compiled_starters/git-starter-haskell/: README.md  codecrafters.yml  your_git.sh
compiled_starters/git-starter-kotlin/: README.md  codecrafters.yml  settings.gradle.kts  your_git.sh
compiled_starters/git-starter-nodejs/: README.md  your_git.sh
compiled_starters/git-starter-php/: codecrafters.yml  your_git.sh
compiled_starters/git-starter-python/: README.md  your_git.sh
compiled_starters/git-starter-ruby/: README.md  your_git.sh
compiled_starters/git-starter-rust/: Cargo.toml  README.md  your_git.sh
compiled_starters/git-starter-rust/src/: main.rs
compiled_starters/git-starter-typescript/: README.md  codecrafters.yml  your_git.sh
compiled_starters/react-starter-javascript/: README.md  codecrafters.yml
compiled_starters/redis-starter-c/: README.md  spawn_redis_server.sh
compiled_starters/redis-starter-clojure/: README.md  codecrafters.yml  project.clj  spawn_redis_server.sh
compiled_starters/redis-starter-crystal/: README.md  codecrafters.yml
compiled_starters/redis-starter-csharp/: README.md
compiled_starters/redis-starter-elixir/: README.md  codecrafters.yml  spawn_redis_server.sh
compiled_starters/redis-starter-go/: README.md  spawn_redis_server.sh
compiled_starters/redis-starter-golang/: README.md  codecrafters.yml
compiled_starters/redis-starter-haskell/: .gitignore  README.md  codecrafters.yml  hs-redis-clone.cabal  package.yaml  spawn_redis_server.sh  stack.yaml
compiled_starters/redis-starter-java/: .gitignore  README.md  codecrafters.yml
compiled_starters/redis-starter-javascript/: README.md  codecrafters.yml
compiled_starters/redis-starter-kotlin/: README.md  codecrafters.yml  spawn_redis_server.sh
compiled_starters/redis-starter-nodejs/: README.md  codecrafters.yml
compiled_starters/redis-starter-php/: README.md
compiled_starters/redis-starter-py/: README.md  codecrafters.yml
compiled_starters/redis-starter-python/: README.md  codecrafters.yml  spawn_redis_server.sh
compiled_starters/redis-starter-ruby/: README.md  codecrafters.yml  spawn_redis_server.sh
compiled_starters/redis-starter-rust/: Cargo.toml  README.md  codecrafters.yml
compiled_starters/redis-starter-rust/src/: main.rs
compiled_starters/redis-starter-typescript/: README.md  package-lock.json  spawn_redis_server.sh
compiled_starters/sqlite-starter-csharp/: README.md  codecrafters.yml  download_sample_databases.sh  your_sqlite3.sh
compiled_starters/sqlite-starter-go/: README.md  codecrafters.yml  go.mod  go.sum
compiled_starters/sqlite-starter-javascript/: README.md  package.json
compiled_starters/sqlite-starter-python/: README.md  your_sqlite3.sh
compiled_starters/sqlite-starter-rust/: Cargo.toml  README.md  codecrafters.yml
dockerfiles/docker/: c-9.2.Dockerfile  go-1.13.Dockerfile  go-1.16.Dockerfile  haskell-8.8.Dockerfile  nim-1.0.Dockerfile  php-7.4.Dockerfile  python-3.7.Dockerfile  python-3.8.Dockerfile  rust-1.43.Dockerfile  rust-1.54.Dockerfile  rust-1.62.Dockerfile
dockerfiles/git/: go-1.13.Dockerfile  haskell-8.8.Dockerfile  kotlin-1.3.72.Dockerfile  kotlin-1.4.Dockerfile  nodejs-14.Dockerfile  (+9 more)
docs/: adding_support_for_a_new_language.md
repo_syncer/: sync.rb
starter_templates/: .rustc_info.json  codecrafters.yml  main.rs
starter_templates/docker/rust/: Cargo.toml  Dockerfile  your_docker.sh
starter_templates/docker/rust/src/: main.rs
starter_templates/sqlite/rust/: .gitignore  Cargo.toml  your_sqlite3.sh
starter_templates/sqlite/rust/src/: header.rs  main.rs  record.rs  schema.rs
template_compiler/: compile.rb  compiler.rb  definitions.rb  models.rb
tests/: dockerfile_tester.rb  init.sh  logger.rb  starter_code_uncommenter.rb  starter_repo_tester.rb  test_all.rb  test_course.rb  test_github_actions_config.rb  test_github_actions_matrix.rb  test_harness.rb  test_uncommenter.rb  uncommenter.rb
(+219 files in other folders)
