# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "git-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2018"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] } # http requests
bytes = "0.5"                                                   # helps wrap responses from reqwest
tokio = { version = "0.2", features = ["full"] }                # async http requests
flate2 = "1.0"                                                  # gzip compression
sha-1 = "0.9.0"
anyhow = "1.0.59"                                               # error handling
thiserror = "1.0.32"                                            # error handling
